--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
   
     <footer class="w3-container w3-indigo w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="https://github.com/falvojr" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="https://www.linkedin.com/in/falvojr" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="https://github.com/will4cod" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/william-fernandes-4806a0173" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
